alteração no numero e caminho do style

--- a/carrinho.html
+++ b/carrinho.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -49,8 +48,7 @@
                                 <a href="/login.html" class="nav-link text-white">Entrar</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -81,8 +79,7 @@
                                     Abacate manteiga da melhor qualidade possível e muito fresco.
                                 </h5>
                             </div>
-                            <div
-                                class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+                            <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
                                         <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
@@ -118,8 +115,7 @@
                                     Abacate manteiga da melhor qualidade possível e muito fresco.
                                 </h5>
                             </div>
-                            <div
-                                class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+                            <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
                                         <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
@@ -155,8 +151,7 @@
                                     Abacate manteiga da melhor qualidade possível e muito fresco.
                                 </h5>
                             </div>
-                            <div
-                                class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+                            <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
                                         <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
@@ -192,8 +187,7 @@
                                     Abacate manteiga da melhor qualidade possível e muito fresco.
                                 </h5>
                             </div>
-                            <div
-                                class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
+                            <div class="col-6 offset-6 col-sm-6 offset-sm-6 col-md-4 offset-md-8 col-lg-3 offset-lg-0 col-xl-2 align-self-center mt-3">
                                 <div class="input-group">
                                     <button class="btn btn-outline-dark btn-sm" type="button">
                                         <i class="bi-caret-down" style="font-size: 16px; line-height: 16px;"></i>
@@ -232,9 +226,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -253,12 +245,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
