--- a/confirmrecupsenha.html
+++ b/confirmrecupsenha.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -49,8 +48,7 @@
                                 <a href="/login.html" class="nav-link text-white">Entrar</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -75,8 +73,7 @@
                     Agradecemos pela confiança em nossos serviços.
                 </p>
                 <p>
-                    Cordialmente,<br>
-                    Central de Relacionamento Quitanda Online
+                    Cordialmente,<br> Central de Relacionamento Quitanda Online
                 </p>
                 <p>
                     <a href="/index.html" class="btn btn-lg btn-danger">Voltar à Página Principal</a>
@@ -88,9 +85,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -109,12 +104,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
