--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/estilos.css">
-    
+
     <title>Quitanda Online :: Cadastro</title>
 </head>
 
@@ -29,8 +29,7 @@
                 <a class="navbar-brand" href="/">
                     <strong>Quitanda Online</strong>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse">
@@ -51,8 +50,7 @@
                                 <a href="/login.html" class="nav-link text-white">Entrar</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <svg class="bi" width="24" height="24" fill="currentColor">
                                         <use xlink:href="/bi.svg#cart3" />
@@ -110,9 +108,7 @@
                                     <label for="txtCEP">CEP</label>
                                 </div>
                                 <div class="mb-3 col-md-6 col-lg-8 align-self-end">
-                                    <textarea class="form-control text-muted bg-light"
-                                        style="height: 58px; font-size: 14px;"
-                                        disabled>Digite o CEP para buscarmos o endereço.</textarea>
+                                    <textarea class="form-control text-muted bg-light" style="height: 58px; font-size: 14px;" disabled>Digite o CEP para buscarmos o endereço.</textarea>
                                 </div>
                                 <div class="clearfix"></div>
                                 <div class="form-floating mb-3 col-md-4">
@@ -150,8 +146,7 @@
                     </div>
                     <div class="mb-3 text-left">
                         <a class="btn btn-lg btn-light btn-outline-danger" href="/">Cancelar</a>
-                        <input type="button" value="Criar meu cadastro" class="btn btn-lg btn-danger"
-                            onclick="window.location.href='/confirmarcadastro.html'" />
+                        <input type="button" value="Criar meu cadastro" class="btn btn-lg btn-danger" onclick="window.location.href='/confirmarcadastro.html'" />
                     </div>
                 </form>
             </div>
@@ -161,9 +156,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">Política de
@@ -173,10 +166,8 @@
                         <a href="/trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                     </div>
                     <div class="col-12 col-md-4 text-center text-md-right">
-                        <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a><br>
-                        E-mail: <a href="mailto:email@dominio.com"
-                            class="text-decoration-none text-dark">email@dominio.com</a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">(28) 99999-0000</a>
+                        <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br> Telefone: <a href="phone:28999990000"
+                            class="text-decoration-none text-dark">(77) 99999-0000</a>
                     </div>
                 </div>
             </div>
