--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -49,8 +48,7 @@
                                 <a href="/login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -60,7 +58,7 @@
                 </div>
             </div>
         </nav>
- 
+
         <main class="flex-fill">
             <div class="container">
                 <h1>Minha Conta</h1>
@@ -97,9 +95,8 @@
                                 <label for="txtCEP">CEP</label>
                             </div>
                             <div class="mb-3 col-md-6 col-lg-8">
-                                <textarea class="form-control text-muted bg-light text" style="height: 58px; font-size: 14px;" 
-                                    disabled>Digite o CEP para buscarmos o endereço.</textarea>
-                            </div> 
+                                <textarea class="form-control text-muted bg-light text" style="height: 58px; font-size: 14px;" disabled>Digite o CEP para buscarmos o endereço.</textarea>
+                            </div>
                             <div class="form-floating mb-3 col-md-4">
                                 <input class="form-control" type="text" id="txtNumero" placeholder=" " autofocus />
                                 <label for="txtNumero">Número</label>
@@ -111,7 +108,7 @@
                             <div class="form-floating mb-3">
                                 <input class="form-control" type="text" id="txtReferencia" placeholder=" " autofocus />
                                 <label for="txtReferencia">Ponto de Referência</label>
-                            </div>                           
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -122,9 +119,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -143,12 +138,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
