--- a/cliente_favoritos.html
+++ b/cliente_favoritos.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -49,8 +48,7 @@
                                 <a href="/login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -60,7 +58,7 @@
                 </div>
             </div>
         </nav>
- 
+
         <main class="flex-fill">
             <div class="container">
                 <h1>Minha Conta</h1>
@@ -102,10 +100,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -113,7 +111,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -125,10 +123,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -136,7 +134,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -148,10 +146,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -159,7 +157,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -171,10 +169,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -182,7 +180,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -194,10 +192,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -205,7 +203,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -217,10 +215,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -228,7 +226,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -240,10 +238,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -251,7 +249,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                             <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
                                 <div class="card text-center bg-light">
@@ -263,10 +261,10 @@
                                         R$ 4,50
                                     </div>
                                     <div class="card-body">
-                                      <h5 class="card-title">Banana Prata</h5>
-                                      <p class="card-text truncar-3l">
-                                          Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
-                                      </p>                              
+                                        <h5 class="card-title">Banana Prata</h5>
+                                        <p class="card-text truncar-3l">
+                                            Banana prata da melhor qualidade possível, direto do produtor rural para a sua mesa.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
                                         <a href="carrinho.html" class="btn btn-danger mt-2 d-block">
@@ -274,7 +272,7 @@
                                         </a>
                                         <small class="text-success">320,5kg em estoque</small>
                                     </div>
-                                  </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -286,9 +284,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -307,12 +303,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
