--- a/fechamento_endereco.html
+++ b/fechamento_endereco.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -51,8 +50,7 @@
                                 <a href="/login.html" class="nav-link text-white">Sair</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -72,8 +70,7 @@
                 </h3>
                 <div class="d-flex justify-content-around flex-wrap border rounded-top pt-4 px-3">
                     <div class="mb-4 mx-2 flex-even">
-                        <input type="radio" class="btn-check" name="endereco" 
-                            autocomplete="off" id="end1">
+                        <input type="radio" class="btn-check" name="endereco" autocomplete="off" id="end1">
                         <label class="btn btn-outline-danger p-4 h-100 w-100" for="end1">
                             <h3>
                                 <b class="text-dark">Minha Casa</b><br>
@@ -86,8 +83,7 @@
                         </label>
                     </div>
                     <div class="mb-4 mx-2 flex-even">
-                        <input type="radio" class="btn-check" name="endereco" 
-                            autocomplete="off" id="end2">
+                        <input type="radio" class="btn-check" name="endereco" autocomplete="off" id="end2">
                         <label class="btn btn-outline-danger p-4 h-100 w-100" for="end2">
                             <h3>
                                 <b class="text-dark">Meu Trabalho</b><br>
@@ -100,8 +96,7 @@
                         </label>
                     </div>
                     <div class="mb-4 mx-2 flex-even">
-                        <input type="radio" class="btn-check" name="endereco" 
-                            autocomplete="off" id="end3">
+                        <input type="radio" class="btn-check" name="endereco" autocomplete="off" id="end3">
                         <label class="btn btn-outline-danger p-4 h-100 w-100" for="end3">
                             <h3>
                                 <b class="text-dark">Casa de Praia</b><br>
@@ -114,7 +109,7 @@
                         </label>
                     </div>
                 </div>
-                <div class="text-end border border-top-0 rounded-bottom p-4 pb-0">                    
+                <div class="text-end border border-top-0 rounded-bottom p-4 pb-0">
                     <a href="/fechamento_itens.html" class="btn btn-outline-success btn-lg mb-4">
                         Voltar aos Itens
                     </a>
@@ -127,9 +122,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -148,12 +141,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
