--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/estilos.css">
 
     <title>Quitanda Online :: Página Principal</title>
 </head>
@@ -120,7 +120,7 @@
                                     <li class="page-item">
                                         <a class="page-link" href="#">2</a>
                                     </li>
-                                    <li class="page-item disabled">
+                                    <li class="page-item">
                                         <a class="page-link" href="#">3</a>
                                     </li>
                                     <li class="page-item">
@@ -131,6 +131,9 @@
                                     </li>
                                     <li class="page-item">
                                         <a class="page-link" href="#">6</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">7</a>
                                     </li>
                                 </ul>
                             </nav>
