--- a/produto.html
+++ b/produto.html
@@ -27,8 +27,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger border-bottom shadow-sm mb-3">
             <div class="container">
                 <a class="navbar-brand" href="/"><b>Quitanda Online</b></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target=".navbar-collapse">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse">
@@ -49,8 +48,7 @@
                                 <a href="/login.html" class="nav-link text-white">Entrar</a>
                             </li>
                             <li class="nav-item">
-                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
-                                    title="5 produto(s) no carrinho"><small>5</small></span>
+                                <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="/carrinho.html" class="nav-link text-white">
                                     <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
                                 </a>
@@ -85,15 +83,11 @@
                     <div class="col-12 col-sm-6">
                         <h1>Banana Prata</h1>
                         <p>
-                            Quis officia irure deserunt reprehenderit sunt non ut amet. Sunt veniam cillum aliqua. Elit
-                            labore duis laboris reprehenderit laborum magna velit dolor veniam sint.
+                            Quis officia irure deserunt reprehenderit sunt non ut amet. Sunt veniam cillum aliqua. Elit labore duis laboris reprehenderit laborum magna velit dolor veniam sint.
                         </p>
                         <p>
-                            Do ut ad quis et qui qui tempor do irure laborum ullamco excepteur. Adipisicing ipsum ad
-                            excepteur sit ipsum adipisicing. Ut ut elit proident fugiat. Ad deserunt et consequat
-                            aliquip nisi ut dolore sit ut veniam fugiat culpa nulla. Consequat eiusmod ad deserunt ad
-                            sunt adipisicing deserunt nulla est cupidatat commodo do. Minim aliquip dolor in deserunt
-                            elit officia. Anim duis ullamco cillum nulla voluptate dolore velit ad Lorem adipisicing.
+                            Do ut ad quis et qui qui tempor do irure laborum ullamco excepteur. Adipisicing ipsum ad excepteur sit ipsum adipisicing. Ut ut elit proident fugiat. Ad deserunt et consequat aliquip nisi ut dolore sit ut veniam fugiat culpa nulla. Consequat eiusmod ad
+                            deserunt ad sunt adipisicing deserunt nulla est cupidatat commodo do. Minim aliquip dolor in deserunt elit officia. Anim duis ullamco cillum nulla voluptate dolore velit ad Lorem adipisicing.
                         </p>
                         <p>
                             <button class="btn btn-lg btn-danger mb-3 mb-xl-0 me-2">
@@ -112,9 +106,7 @@
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
-                        &copy; 2020 - Quitanda Online Ltda ME<br>
-                        Rua Virtual Inexistente, 171, Compulândia/PC <br>
-                        CPNJ 99.999.999/0001-99
+                        &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <a href="/privacidade.html" class="text-decoration-none text-dark">
@@ -133,12 +125,10 @@
                     <div class="col-12 col-md-4 text-center">
                         <a href="/contato.html" class="text-decoration-none text-dark">
                             Contato pelo Site
-                        </a><br>
-                        E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
                             email@dominio.com
-                        </a><br>
-                        Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
-                            (28) 99999-0000
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                            (77) 99999-0000
                         </a>
                     </div>
                 </div>
