alteração no style

--- a/cadastro.html
+++ b/cadastro.html
@@ -159,14 +159,14 @@
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="/privacidade.html" class="text-decoration-none text-dark">Política de
+                        <a href="privacidade.html" class="text-decoration-none text-dark">Política de
                             Privacidade</a><br>
-                        <a href="/termos.html" class="text-decoration-none text-dark">Termos de Uso</a><br>
-                        <a href="/quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
-                        <a href="/trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+                        <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a><br>
+                        <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
+                        <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
                     </div>
                     <div class="col-12 col-md-4 text-center text-md-right">
-                        <a href="/contato.html" class="text-decoration-none text-dark">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br> Telefone: <a href="phone:28999990000"
+                        <a href="contato.html" class="text-decoration-none text-dark">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br> Telefone: <a href="phone:28999990000"
                             class="text-decoration-none text-dark">(77) 99999-0000</a>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
         </footer>
     </div>
 
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
