alteração no tag title index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Quitanda Online :: Página Principal</title>
+    <title> teste Quitanda Online :: Página Principal</title>
 </head>
 
 <body>
