alteração 'caminho do css.bootstrap'

--- a/cliente_contatos.html
+++ b/cliente_contatos.html
@@ -15,8 +15,8 @@
     <meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Área do Cliente :: Contatos</title>
