inclusão dos endereços de entrega

--- a/fechamento_endereco.html
+++ b/fechamento_endereco.html
@@ -75,10 +75,10 @@
                             <h3>
                                 <b class="text-dark">Minha Casa</b><br>
                                 <hr>
-                                <b>Ricardo Maroquio</b><br>
-                                Rua Caminho Virtual, 101<br>
-                                Compulândia/PC<br>
-                                CEP 01.010-101
+                                <b>Mateus Ângelo</b><br>
+                                Rua Piauí, N° 165<br>
+                                Lagoa Grande/BJL<br>
+                                CEP 47600-000
                             </h3>
                         </label>
                     </div>
@@ -88,10 +88,10 @@
                             <h3>
                                 <b class="text-dark">Meu Trabalho</b><br>
                                 <hr>
-                                <b>Ricardo Maroquio</b><br>
-                                Rua Caminho Virtual, 101<br>
-                                Compulândia/PC<br>
-                                CEP 01.010-101
+                                <b>Mateus Ângelo</b><br>
+                                Rua Santa Luzia, N° 970<br>
+                                Centro/BJL<br>
+                                CEP 47600-000
                             </h3>
                         </label>
                     </div>
@@ -99,12 +99,12 @@
                         <input type="radio" class="btn-check" name="endereco" autocomplete="off" id="end3">
                         <label class="btn btn-outline-danger p-4 h-100 w-100" for="end3">
                             <h3>
-                                <b class="text-dark">Casa de Praia</b><br>
+                                <b class="text-dark">Casa da Sogra</b><br>
                                 <hr>
-                                <b>Ricardo Maroquio</b><br>
-                                Rua Caminho Virtual, 101<br>
-                                Compulândia/PC<br>
-                                CEP 01.010-101
+                                <b>Mateus Ângelo</b><br>
+                                Rua Dr Dermerval, N° 168<br>
+                                São Gotardo/BJL<br>
+                                CEP 47600-000
                             </h3>
                         </label>
                     </div>
