inclusão do js, validação do cookies

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             <button class="cookies-save">Salvar e Continuar</button>
         </div>
     </div>
-    <script src="./cookies.js"></script>
+    <script src="./scripts/cookies.js"></script>s
 
 </body>
 
