ajuste no index.html

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
             </div>
         </footer>
     </div>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 
     <!-- inclusão dos cookies  -->
 
@@ -513,7 +513,10 @@
             <button class="cookies-save">Salvar e Continuar</button>
         </div>
     </div>
-    <script src="./scripts/cookies.js"></script>s
+
+    <script src="./scripts/cookies.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 
 </body>
 
