alteração tamanho do carrinho

--- a/cadastro.html
+++ b/cadastro.html
@@ -52,9 +52,7 @@
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <svg class="bi" width="24" height="24" fill="currentColor">
-                                        <use xlink:href="/bi.svg#cart3" />
-                                    </svg>
+                                    <i class="bi-cart" style="font-size:40px;line-height:30px;"></i>
                                 </a>
                             </li>
                         </ul>
@@ -104,7 +102,7 @@
                             <fieldset class="row gx-3">
                                 <legend>Endereço</legend>
                                 <div class="form-floating mb-3 col-md-6 col-lg-4">
-                                    <input class="form-control" type="text" id="txtCEP" placeholder=" " />
+                                    <input class="form-control" type="text" id="txtCEP" placeholder=" " required/>
                                     <label for="txtCEP">CEP</label>
                                 </div>
                                 <div class="mb-3 col-md-6 col-lg-8 align-self-end">
@@ -152,22 +150,21 @@
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-light">
+        <footer class="border-top text-muted bg-danger ">
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center text-md-left">
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none text-dark">Política de
+                        <a href="privacidade.html" class="text-decoration-none">Política de
                             Privacidade</a><br>
-                        <a href="termos.html" class="text-decoration-none text-dark">Termos de Uso</a><br>
-                        <a href="quemsomos.html" class="text-decoration-none text-dark">Quem Somos</a><br>
-                        <a href="trocas.html" class="text-decoration-none text-dark">Trocas e Devoluções</a>
+                        <a href="termos.html" class="text-decoration-none">Termos de Uso</a><br>
+                        <a href="quemsomos.html" class="text-decoration-none">Quem Somos</a><br>
+                        <a href="trocas.html" class="text-decoration-none">Trocas e Devoluções</a>
                     </div>
                     <div class="col-12 col-md-4 text-center text-md-right">
-                        <a href="contato.html" class="text-decoration-none text-dark">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">email@dominio.com</a><br> Telefone: <a href="phone:28999990000"
-                            class="text-decoration-none text-dark">(77) 99999-0000</a>
+                        <a href="contato.html" class="text-decoration-none">Contato pelo site</a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">email@dominio.com</a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">(77) 99999-0000</a>
                     </div>
                 </div>
             </div>
