--- a/cliente_endereco.html
+++ b/cliente_endereco.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font/bootstrap-icons.css">s
+    <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Área do Cliente :: Endereço</title>
@@ -50,7 +50,7 @@
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <i class="bi-cart" style="font-size:40px;line-height:30px;"></i>
                                 </a>
                             </li>
                         </ul>
@@ -115,32 +115,32 @@
             </div>
         </main>
 
-        <footer class="border-top text-muted bg-light">
+        <footer class="border-top text-muted bg-danger">
             <div class="container">
                 <div class="row py-3">
                     <div class="col-12 col-md-4 text-center">
                         &copy; 2020 - Quitanda Online Ltda ME<br> Rua Virtual Inexistente, 171, Compulândia/PC <br> CPNJ 99.999.999/0001-99
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="privacidade.html" class="text-decoration-none text-dark">
+                        <a href="privacidade.html" class="text-decoration-none">
                             Política de Privacidade
                         </a><br>
-                        <a href="termos.html" class="text-decoration-none text-dark">
+                        <a href="termos.html" class="text-decoration-none">
                             Termos de Uso
                         </a><br>
-                        <a href="quemsomos.html" class="text-decoration-none text-dark">
+                        <a href="quemsomos.html" class="text-decoration-none">
                             Quem Somos
                         </a><br>
-                        <a href="trocas.html" class="text-decoration-none text-dark">
+                        <a href="trocas.html" class="text-decoration-none">
                             Trocas e Devoluções
                         </a>
                     </div>
                     <div class="col-12 col-md-4 text-center">
-                        <a href="contato.html" class="text-decoration-none text-dark">
+                        <a href="contato.html" class="text-decoration-none">
                             Contato pelo Site
-                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none text-dark">
+                        </a><br> E-mail: <a href="mailto:email@dominio.com" class="text-decoration-none">
                             email@dominio.com
-                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none text-dark">
+                        </a><br> Telefone: <a href="phone:28999990000" class="text-decoration-none">
                             (77) 99999-0000
                         </a>
                     </div>
