alteração tamanho do carrinho

--- a/recuperarsenha.html
+++ b/recuperarsenha.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font/bootstrap-icons.css">s
+    <link rel="stylesheet" href="css/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css">
 
     <title>Quitanda Online :: Recuperação de Senha</title>
@@ -50,7 +50,7 @@
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:24px;line-height:24px;"></i>
+                                    <i class="bi-cart" style="font-size:40px;line-height:30px;"></i>
                                 </a>
                             </li>
                         </ul>
