--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </li>
                     </ul>
                     <div class="align-self-end">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a href="cadastro.html" class="nav-link text-white">Quero Me Cadastrar</a>
                             </li>
@@ -50,7 +50,7 @@
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:40px;line-height:30px;"></i>
+                                    <i class="bi-cart" style="font-size:35px;line-height:30px;"></i>
                                 </a>
                             </li>
                         </ul>
