caminho bootstrap.js alterado

--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
         </footer>
     </div>
     <script src="scripts/login.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
