alteração icon carrinho de compras

--- a/cadastro.html
+++ b/cadastro.html
@@ -52,7 +52,7 @@
                             <li class="nav-item">
                                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0" title="5 produto(s) no carrinho"><small>5</small></span>
                                 <a href="carrinho.html" class="nav-link text-white">
-                                    <i class="bi-cart" style="font-size:40px;line-height:30px;"></i>
+                                    <i class="bi-cart4" style="font-size:30px;line-height:30px;"></i>
                                 </a>
                             </li>
                         </ul>
